Fix search bar width on mobile

--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -24,7 +24,7 @@ body {
   left: 0;
   right: 0;
   max-width: 700px;
-  padding: 10px 25px;
+  padding: 10px 35px;
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
