--- a/src/css/randomGenerator/_search.scss
+++ b/src/css/randomGenerator/_search.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 
   form {
     display: flex;
@@ -10,8 +11,7 @@
     margin: 3px 0;
   }
 
-  form > div,
-  input {
+  form > div {
     width: 100%;
   }
 
@@ -33,9 +33,9 @@
     -webkit-appearance: none;
     border: none;
     border-bottom: 2px solid $highlight;
-    width: 200px;
     font-family: inherit;
     padding-right: 25px;
+    width: 100%;
   }
 
   input,
